# selectled

./: --full-page  .gitignore  .mcp.json  arquivo.txt  changelog.md  guia-condominial.html
guia-condominial/: next.config.ts
guia-condominial/app/: page.tsx
guia-condominial/app/noticias/: page.tsx
guia-condominial/app/noticias/[slug]/: page.tsx
guia-condominial/components/: Depoimentos.tsx  Diferenciais.tsx  Equipe.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  PostInteractions.tsx  Services.tsx  Topbar.tsx
selectled/: package-lock.json  package.json
selectled/content/blog/: checklist-completo-producao-evento-corporativo.mdx  eventos-corporativos-em-alphaville-como-escolher-o-painel.mdx  onde-alugar-painel-de-led-em-campinas-guia-completo.mdx  p2-vs-p3-vs-p4-qual-painel-led-escolher.mdx  painel-led-outdoor-funciona-mesmo-sob-chuva.mdx  por-que-igrejas-estao-investindo-em-paineis-led.mdx  quanto-custa-alugar-painel-de-led-em-sao-paulo-2026.mdx
selectled/public/videos/: cidade-hero-bg.webm  page-transition.webm  splash-bg-base.webm  splash-bg.webm  vendas-hero-bg.webm
selectled/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
selectled/src/contexts/: city-transition-context.tsx  language-context.tsx
selectled/src/data/: cases.ts  cities.ts  products.ts  services.ts  translations.ts
selectled/src/lib/: blog.ts  utils.ts
tools/lightrag/: .gitignore  pyproject.toml
tools/lightrag/lightrag_kg/: __init__.py  cli.py  config.py  index.py  llm.py  rag.py  server.py  to_obsidian.py
tools/lightrag/tests/: test_smoke.py
(+42 files in other folders)
