[project]
name = "lightrag-kg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lightrag-hku>=1.4.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.2.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "tenacity>=8.0",
    "nano-vectordb>=0.0.4",
    "aiofiles>=23.0",
    "tiktoken>=0.7",
    "pipmaster>=0.0.20",
    "google-genai>=1.0.0",
]

[project.scripts]
kg-server      = "lightrag_kg.server:main"
kg-index       = "lightrag_kg.index:main"
kg-to-obsidian = "lightrag_kg.to_obsidian:main"
rag            = "lightrag_kg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lightrag_kg"]
